# jav

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  LICENSE  README.md  README_CN.md  README_EN.md  go.mod  go.sum  install.ps1  install.sh  main.go
.github/workflows/: release.yml
cmd/: config.go  get.go  init.go  page.go  root.go  tool.go
src/: main.rs
src/cloud115/: auth.rs  m115.rs  mod.rs  offline.rs  types.rs
src/scraper/: client.rs  mod.rs  types.rs
src/store/: mod.rs
src/tui/: app.rs  input.rs  mod.rs  render.rs  theme.rs
