[package]
name = "jav"
version = "0.2.0"
edition = "2024"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"
ratatui-image = "4"
image = "0.25"

# async runtime
tokio = { version = "1", features = ["full"] }

# HTTP + scraping
reqwest = { version = "0.12", default-features = false, features = ["cookies", "json", "rustls-tls"] }
scraper = "0.22"

# storage
rusqlite = { version = "0.32", features = ["bundled"] }

# utils
clap = { version = "4", features = ["derive"] }
anyhow = "1"
rand = "0.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
qrcode = "0.14.1"
dirs = "6.0.0"
arboard = "3"
base64 = "0.22"
terminal-light = "1"
